src/k8s/apps/tandoor/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tandoor-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
