src/k8s/apps/tandoor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tandoor
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
