src/k8s/apps/tandoor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tandoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tandoor
  template:
    metadata:
      annotations:
        secret.reloader.stakater.com/reload: tandoor-runtime
      labels:
        app.kubernetes.io/name: tandoor
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
        - name: tandoor
          image: vabene1111/recipes:2.6.15
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: tandoor.levizitting.com
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: tandoor.levizitting.com
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: tandoor.levizitting.com
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
