src/k8s/apps/tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor
spec:
  selector:
    app.kubernetes.io/name: tandoor
  ports:
    - name: http
      port: 80
      targetPort: http
